fixed compiler problems, and weird error
A function that is called for every malloc was throwing an error every time if stat was defined. This was stupid, I commented it out. Four hours of work to find it.

Also, the dockerfile had some small problems, so I fixed them

--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -40,13 +40,13 @@ RUN git checkout e758b77161a7
 
 RUN mkdir -p /app/llvm15/build
 WORKDIR /app/llvm15/build
-RUN cmake -DLLVM_TARGET_ARCH="X86" -DLLVM_TARGETS_TO_BUILD="ARM;X86;AArch64" \
+RUN cmake -DCLANG_ENABLE_OPAQUE_POINTERS=OFF -DLLVM_TARGET_ARCH="X86" -DLLVM_TARGETS_TO_BUILD="ARM;X86;AArch64" \
     -DLLVM_EXPERIMENTAL_TARGETS_TO_BUILD=WebAssembly -DCMAKE_BUILD_TYPE=Release \
-    -DLLVM_ENABLE_PROJECTS="clang;openmp" -DLLVM_ENABLE_RTTI=ON -G "Unix Makefiles" -DCLANG_ENABLE_OPAQUE_POINTERS=OFF ../llvm
+    -DLLVM_ENABLE_PROJECTS="clang;openmp" -DLLVM_ENABLE_RTTI=ON -G "Unix Makefiles" ../llvm
 
 RUN make -j6
-RUN cmake -DCMAKE_INSTALL_PREFIX=/app/llvm15/build -P -DCLANG_ENABLE_OPAQUE_POINTERS=OFF cmake_install.cmake
-RUN cmake -DCMAKE_INSTALL_PREFIX=/app/llvm15/build -P -DCLANG_ENABLE_OPAQUE_POINTERS=OFF /app/llvm15/build/projects/openmp/cmake_install.cmake
+RUN cmake -DCLANG_ENABLE_OPAQUE_POINTERS=OFF -DCMAKE_INSTALL_PREFIX=/app/llvm15/build -P cmake_install.cmake
+RUN cmake -DCLANG_ENABLE_OPAQUE_POINTERS=OFF -DCMAKE_INSTALL_PREFIX=/app/llvm15/build -P /app/llvm15/build/projects/openmp/cmake_install.cmake
 
 # wllvm
 RUN pip3 install wllvm
